kubernetes/components/geoip.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: geoip-api-deployment
  namespace: angler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: geoip-api
  template:
    metadata:
      labels:
        app: geoip-api
    spec:
      imagePullSecrets:
      - name: ghcr-token
      containers:
        - name: geoip-api
          image: ghcr.io/konstfish/angler_geoip-api:latest
          imagePullPolicy: Always
