kubernetes/components/auth.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
  namespace: angler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: angler-auth
  template:
    metadata:
      labels:
        app: angler-auth
    spec:
      imagePullSecrets:
      - name: ghcr-token
      containers:
        - name: angler-auth
          image: ghcr.io/konstfish/angler_auth:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8086
---
apiVersion: v1
kind: Service
metadata:
  name: angler-auth
  namespace: angler
spec:
  selector:
    app: angler-auth
  ports:
    - protocol: TCP
      name: auth
      port: 8086
      targetPort: 8086
