kubernetes/components/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: angler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: angler-backend
  template:
    metadata:
      labels:
        app: angler-backend
    spec:
      imagePullSecrets:
      - name: ghcr-token
      containers:
        - name: angler-backend
          image: ghcr.io/konstfish/angler_backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8085
---
apiVersion: v1
kind: Service
metadata:
  name: angler-backend
  namespace: angler
spec:
  selector:
    app: angler-backend
  ports:
    - protocol: TCP
      name: backend
      port: 8085
      targetPort: 8085
