kubernetes/components/ingress.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-deployment
  namespace: angler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: angler-ingress
  template:
    metadata:
      labels:
        app: angler-ingress
    spec:
      imagePullSecrets:
      - name: ghcr-token
      containers:
        - name: angler-ingress
          image: ghcr.io/konstfish/angler_ingress:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8084
---
apiVersion: v1
kind: Service
metadata:
  name: angler-ingress
  namespace: angler
spec:
  selector:
    app: angler-ingress
  ports:
    - protocol: TCP
      name: ingress
      port: 8084
      targetPort: 8084
